# ModLinear

./: README.md
modlinear/: __init__.py  tool.py  utils.py
modlinear_pypi/: README.md  pyproject.toml  tutorial.py
