[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modlinear"
version = "1.0.0"
authors = [
  { name="Xuewen Zhang", email="xuewen.zhang741@outlook.com"}
]
maintainers = [
  { name="Xuewen Zhang", email="xuewen.zhang741@outlook.com"}
]
dependencies = [
  "numpy",
  "casadi",
  "control",
  "matplotlib",
]
description = "A wrapped package to linearize the nonlinear continuous/discrete model. Including **numerical** and **symbolic** calculations."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Modeling", "Linear model", "model linearization", "nonlinear model", "discrete model", "continuous model", "continuous to discrete model"]
requires-python = ">=3.6"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Pick your license as you wish
    "License :: OSI Approved :: Apache Software License",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",

]

[project.urls]
Homepage = "https://github.com/QiYuan-Zhang/ModLinear"
Issues = "https://github.com/QiYuan-Zhang/ModLinear/issues"
Introduction = "https://qiyuan-zhang.github.io/my-toolbox/2024/04/25/Developed-modlinear.html"
